# Homework28_Django_CRUD

./: manage.py  pyproject.toml  utils.py
Homework28_Django_CRUD/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
ads/: admin.py  models.py  views.py
ads/migrations/: 0001_initial.py
ads/urls/: ad_urls.py  cat_urls.py
fixtures/: user.json
users/: models.py  views.py
users/migrations/: 0001_initial.py
users/urls/: user_urls.py
