[tool.poetry]
name = "homework28-django-crud"
version = "0.1.0"
description = ""
authors = ["MichaelRodionov <106465054+MichaelRodionov@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "homework28_django_crud"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
psycopg2-binary = "^2.9.5"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
